# MaoDataAgent

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  conf.yml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b2c3d4e5f6a7_add_workflow_tables_debug_events.py  c3d4e5f6a7b8_add_user_datasources.py  d4e5f6a7b8c9_change_seq_to_varchar.py  e5f6a7b8c9d0_add_user_role.py  ffb68fdb137e_initial_schema.py
backend/app/: auth.py  config.py  doc_parser.py  main.py
backend/app/cpt_parser/: __init__.py  llm_enricher.py  models.py  physical_resolver.py  sql_analyzer.py  template_preprocessor.py  xml_parser.py
backend/app/db/: business_models.py  database.py  models.py  session.py  tenant_db.py  user_datasource_db.py  workflow_db.py
backend/app/embedding/: embedder.py  embedding_store.py  router.py  schemas.py
backend/app/models/: schemas.py
backend/app/ontology/: database.py  models.py  router.py  schemas.py  service.py
backend/app/router/: auth.py  chat.py  conversation.py  datasource.py  debug.py  skills.py  storage.py  tenant.py  tools_test.py  user_datasource.py  workflow.py
backend/app/seed/: pwd_utils.py  sample_data_seed.py
backend/data/: init.sql  sample_manufacturing.sql  seed_data.sql
backend/tests/: conftest.py  test_agent.py  test_api_auth.py  test_api_conversation.py  test_api_ontology.py  test_business_rules.py  test_engine.py  test_sample_data.py  test_sse_chat.py  test_text2data_workflow.py  test_tools.py  test_workflow_db.py
backend/workflows/: explore_table.yaml
(+56 files in other folders)
